[gd_scene load_steps=7 format=3 uid="uid://bt5i4o6e65m0x"]

[ext_resource type="AudioStream" uid="uid://kuobfcjv8sx6" path="res://assets/SFX/Placeholder/snd_em_fire.ogg" id="1"]
[ext_resource type="AudioStream" uid="uid://cpbrsidi03i20" path="res://assets/SFX/Placeholder/snd_enemy_hurt.ogg" id="2"]
[ext_resource type="Script" uid="uid://cfhp1r4uc04l1" path="res://src/Utility/Outdated/Stoner.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://c3dr3nd10hxj8" path="res://assets/Actor/Enemy/EnemyTemp.png" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(88, 48)

[node name="Stoner" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 10
script = ExtResource("3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("1")

[node name="PlayerDetector" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
modulate = Color(0, 0.0156863, 0.937255, 0.392157)
position = Vector2(-80, -64)
shape = SubResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("4")
hframes = 18
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="PosHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2")
bus = "SFX"

[node name="PosFire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1")
bus = "SFX"

[node name="FireCooldown" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
